2004-04-02 Braden McDaniel  <braden@endoframe.com>

	Set the default drawing color (i.e., in the absence of a Color
	node) in vrml97_node::shape_node::do_render_child.  Added
	geometry_node::emissive to indicate whether geometry should
	be drawn with the emissive color (rather than the diffuse
	color).  This should resolve problems rendering line and point
	sets with the emissive color.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp

2004-03-28 Braden McDaniel  <braden@endoframe.com>

	* configure.ac:  Excise -rpath flag from the SDL_LIBS variable.
	sdl-config (which is used by AM_PATH_SDL) emits an -rpath flag
	pointing at its library installation directory.  We don't want
	this, as it prevents users from linking lookat against, for
	example, a locally compiled libGL when a version of the library
	also exists in SDL's library installation directory, typically
	/usr/lib.

2004-03-23 Braden McDaniel  <braden@endoframe.com>

	Removed rendering_context argument from
	texture_node::render_texture and
	texture_transform_node::render_texture_transform.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2004-03-22 Braden McDaniel  <braden@endoframe.com>

	Formatting improvements to the NIST test suite result table.

	* doc/conformance.doc
	* doc/doxygen-header

2004-03-22 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(point_set_node::modified, shape_node::modified):  Fixed
	recursive call.

2004-03-22 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(viewer::insert_shell):  Only build vector of vertices when
	drawing shells with non-convex polygons.

2004-03-21 Braden McDaniel  <braden@endoframe.com>
